--- a/practica_1.qmd
+++ b/practica_1.qmd
@@ -31,7 +31,8 @@ D'un primer cop d'ull podem veure que tenim 126000 observacions amb 6 variables 
 Aquí ja ens hem trobat el primer problema, resulta que les dades no estan en format *tidy* i presenten un tipus de repeticions, per exemple, hi ha una columna que ens mostra el total de defuncions de cada una de les categories, però dins la mateixa columna, tenim el total de morts per Covid 19, el total de morts homes de Covid 19 i, entre d'altres, el total de morts a La Rioja que són dones i sospitoses d'haver tengut el Covid 19. Això ens ha donat alguns problemes, però emprant alguns filtres ho hem solucionat.
 
 
-## Anàlisi exploratori
+## Anàlisi exploratòria
+
 
 
 
