--- a/practica_1.qmd
+++ b/practica_1.qmd
@@ -72,7 +72,7 @@ cov_Total$SemanaDef <- c(1:53)
 ggplot(cov_Total, aes(x = SemanaDef, y = DefTotal, group = DefTotal)) + geom_point(color = "red", size = 2) + labs(title = "Evolució de la pandèmia per setmanes")+ theme(plot.title = element_text(hjust = 0.5, size = 16, face = "bold", color = "black"))
 ```
 
-Aquí podem veure que hi ha dues 3 ones on la malaltia va causar moltes morts, on les dues primeres varen ser més fortes que la darrera.
+Després de la nostra anàlisi, podem observar en el gràfic que l'evolució de morts per setmana de COVID-19 no és gens **monòtona**. En efecte, aquesta presenta dos màxims relatius en les setmanes 5 i 30 de, resepctivament, 11.205 i 11.014 defuncions. En línies generals, tenim una pujada molt ràpida de morts al principi de la pandèmia que arriba a un màxim absolut a la cinquena setmana. Seguidament i, en línies generals, s'instal·la una tendència a la baixa que, assoleix el seu mínim de 8167 morts en la setmana n.23. Aleshores, tornam a veure una ràpida pujada entre les setmanes 23 i 30 on s'assoleix un altre màxim relatiu molt semblant a la xifra absoluta del màxim. 
 
 
 
